# dramatiq-poc

./: main.py  pyproject.toml
dramatiq_case/: __init__.py  publishers.py  receivers.py
